# linkedin-scraper

./: .gitignore  Dockerfile  README.md  crawler.py  crawler_threadpool.py  docker-compose.yml  posts.json  profiles_new.json  pyproject.toml
analysis/: analysis.ipynb
crawler/: driver_setup.py  post_scraper.py  profile_scraper.py  queue_handler.py  storage_handler.py
data/: posts_new.json  profiles.json
