[tool.poetry]
name = "linkedin-scraper"
version = "0.1.0"
description = ""
authors = ["Aditya"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.26.1"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
python-dotenv = "^1.0.1"
redis = "^5.2.0"
requests = "^2.32.3"
psycopg2 = "^2.9.10"
configparser = "^7.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
